[project]
name = "ultravox-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "fastapi>=0.124.4",
    "hf-xet>=1.2.0",
    "hypercorn>=0.18.0",
    "librosa>=0.11.0",
    "peft>=0.18.0",
    "python-multipart>=0.0.20",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
]
